Added customer tests and method security.